<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="T_Ctrl_SIf_PST" Id="{58d0739e-4a8a-4029-ba5b-a0cf536771b3}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_PST :
STRUCT
	///configuration
	Cfg: T_Ctrl_SIf_PST_Cfg;
	///parameter
	Par: T_Ctrl_SIf_PST_Par;
	///current values
	Cur: T_Ctrl_SIf_PST_Cur;
	///io input
	In: T_Ctrl_SIf_PST_In;
	///alarm number used in this controller
	Alm: ARRAY[1..E_ALM_PST.MAX_E_ALM_PST] OF T_Ctrl_Alm;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>