<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="T_Ctrl_SIf_PST_Cur" Id="{fa22d38c-c5cf-4392-a225-50007f420a94}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_PST_Cur :
STRUCT
	/// # of papers in the stack
	uinStackHight: UINT;
	/// Total number of stacks ejected 
	udiNumOfStacksEjectedTotal: UDINT;
	/// Indicates that the last stacking job was incomplete. Run command not possible. Needs eject command from saber.
	bolStackIncomplete: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>