<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="T_Ctrl_SIf_PST_In" Id="{a204f6a2-6124-4daa-acde-65724e33b865}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_PST_In :
STRUCT
	/// Sensor detects if a paper is at the operator position
	bolSensorPaperAtOperatorPos: BASE_PLC.T_Ctrl_IoBoolDebounced;
	/// Sensor detects the stopper position (TRUE = stopper position down , FALSE = stopper position up)
	bolSensorStopperPosition: BASE_PLC.T_Ctrl_IoBoolDebounced;
	/// Sensor detects paper on outfeed position 
	bolSensorOutfeed: BASE_PLC.T_Ctrl_IoBoolDebounced;
	/// Sensor detects paper on infeed position
	bolSensorInfeed: BASE_PLC.T_Ctrl_IoBool;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>